--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,15 @@
   "version": "1.0",
   "description": "Simple example project that shows the use of popups, content scripts and service workers in a chrome extension.",
   "manifest_version": 3,
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "/img/icon16.png",
+      "32": "/img/icon32.png",
+      "48": "/img/icon48.png",
+      "128": "/img/icon128.png"
+    }
+  },
   "icons": {
     "16": "/img/icon16.png",
     "32": "/img/icon32.png",
